force-app/main/default/objects/Contact/fields/Immigration_Status__c.field-meta.xml
<CustomField>
    <fullName>Immigration_Status__c</fullName>
    <description>Current immigration status of the Contact. Classified as restricted data.</description>
    <inlineHelpText>Select the Contact's current immigration status; handle this information according to data policy.</inlineHelpText>
    <label>Immigration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Renewal in Progress</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>