force-app/main/default/objects/Contact/fields/Issuing_Authority__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Authority__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Links the Contact's visa details to the Account representing the issuing authority.</description>
    <inlineHelpText>Select the organization that issued the Contact's visa.</inlineHelpText>
    <label>Issuing Authority</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>