force-app/main/default/objects/Contact/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <description>Country of citizenship of the Contact. Classified as restricted data.</description>
    <inlineHelpText>Select the Contact's nationality / country of citizenship; handle this information according to data policy.</inlineHelpText>
    <label>Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TTS_Countries</valueSetName>
    </valueSet>
</CustomField>