force-app/main/default/objects/Contact/fields/Passport_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Passport_Expiry_Date__c</fullName>
    <description>Date the Contact's passport expires. Classified as restricted data.</description>
    <inlineHelpText>Enter the passport expiry date; handle this information according to data policy.</inlineHelpText>
    <label>Passport Expiry Date</label>
    <type>Date</type>
</CustomField>