force-app/main/default/objects/Contact/fields/Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Number__c</fullName>
    <description>Passport identifier for the Contact. Classified as restricted data.</description>
    <inlineHelpText>Enter the passport number exactly as issued; handle this information according to data policy.</inlineHelpText>
    <label>Passport Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>