force-app/main/default/objects/Contact/fields/Right_to_Work_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Right_to_Work_Check_Date__c</fullName>
    <description>Date the right-to-work / immigration compliance check was performed. Classified as restricted data.</description>
    <inlineHelpText>Enter the date the right-to-work check was completed; handle this information according to data policy.</inlineHelpText>
    <label>Right to Work Check Date</label>
    <type>Date</type>
</CustomField>