force-app/main/default/objects/Contact/fields/UK_ATAS_Certificate__c.field-meta.xml
<CustomField>
    <fullName>UK_ATAS_Certificate__c</fullName>
    <description>UK Academic Technology Approval Scheme (ATAS) certificate reference. Classified as restricted data.</description>
    <inlineHelpText>Enter the ATAS certificate reference where required for the research field; handle this information according to data policy.</inlineHelpText>
    <label>UK ATAS Certificate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>