force-app/main/default/objects/Contact/fields/UK_BRP_Number__c.field-meta.xml
<CustomField>
    <fullName>UK_BRP_Number__c</fullName>
    <description>UK Biometric Residence Permit (BRP) number. Classified as restricted data.</description>
    <inlineHelpText>Enter the UK BRP number; handle this information according to data policy.</inlineHelpText>
    <label>UK BRP Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>