force-app/main/default/objects/Contact/fields/UK_CAS_Number__c.field-meta.xml
<CustomField>
    <fullName>UK_CAS_Number__c</fullName>
    <description>UK Confirmation of Acceptance for Studies (CAS) reference. Classified as restricted data.</description>
    <inlineHelpText>Enter the UK CAS number for sponsored students; handle this information according to data policy.</inlineHelpText>
    <label>UK CAS Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>