force-app/main/default/objects/Contact/fields/US_Form_Type__c.field-meta.xml
<CustomField>
    <fullName>US_Form_Type__c</fullName>
    <description>US immigration document type held by the Contact. Classified as restricted data.</description>
    <inlineHelpText>Select the US immigration form type; handle this information according to data policy.</inlineHelpText>
    <label>US Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I-20 (F-1 Student)</fullName>
            </value>
            <value>
                <fullName>DS-2019 (J-1 Exchange Visitor)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>