force-app/main/default/objects/Contact/fields/US_I94_Number__c.field-meta.xml
<CustomField>
    <fullName>US_I94_Number__c</fullName>
    <description>US I-94 arrival/departure admission number. Classified as restricted data.</description>
    <inlineHelpText>Enter the US I-94 admission number; handle this information according to data policy.</inlineHelpText>
    <label>US I-94 Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>