force-app/main/default/objects/Contact/fields/US_SEVIS_ID__c.field-meta.xml
<CustomField>
    <fullName>US_SEVIS_ID__c</fullName>
    <description>US Student and Exchange Visitor Information System (SEVIS) identifier. Classified as restricted data.</description>
    <inlineHelpText>Enter the US SEVIS ID; handle this information according to data policy.</inlineHelpText>
    <label>US SEVIS ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>