force-app/main/default/objects/Contact/fields/Visa_Days_To_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Visa_Days_To_Expiry__c</fullName>
    <description>Days remaining until the visa expires; blank when no end date is set. Derived from Visa End Date.</description>
    <formula>IF(ISBLANK(Visa_End_Date__c), null, Visa_End_Date__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visa Days To Expiry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>