force-app/main/default/objects/Contact/fields/Visa_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Visa_End_Date__c</fullName>
    <description>Records the date on which the Contact's visa expires. Classified as restricted data.</description>
    <inlineHelpText>Enter the date the Contact's visa expires; handle this information according to data policy.</inlineHelpText>
    <label>Visa End Date</label>
    <type>Date</type>
</CustomField>