force-app/main/default/objects/Contact/fields/Visa_Number__c.field-meta.xml
<CustomField>
    <fullName>Visa_Number__c</fullName>
    <description>Stores the identifier assigned to the Contact's visa. Classified as restricted data.</description>
    <inlineHelpText>Enter the visa identifier exactly as issued to the Contact; handle this information according to data policy.</inlineHelpText>
    <label>Visa Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>