force-app/main/default/objects/Contact/fields/Visa_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Visa_Start_Date__c</fullName>
    <description>Records the date on which the Contact's visa becomes valid. Classified as restricted data.</description>
    <inlineHelpText>Enter the date the Contact's visa becomes valid; handle this information according to data policy.</inlineHelpText>
    <label>Visa Start Date</label>
    <type>Date</type>
</CustomField>