force-app/main/default/objects/Contact/fields/Visa_Type__c.field-meta.xml
<CustomField>
    <fullName>Visa_Type__c</fullName>
    <description>Categorizes the type of visa granted to the Contact. Classified as restricted data.</description>
    <inlineHelpText>Select the visa type granted to the Contact; handle this information according to data policy.</inlineHelpText>
    <label>Visa Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exchange Visitor Visa</fullName>
            </value>
            <value>
                <fullName>Schengen Visa</fullName>
            </value>
            <value>
                <fullName>Student Visa</fullName>
            </value>
            <value>
                <fullName>Work and Study Visa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>