force-app/main/default/objects/Contact/fields/Work_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Work_Authorization__c</fullName>
    <description>Indicates the Contact is permitted to work. Classified as restricted data.</description>
    <inlineHelpText>Check if the Contact is permitted to work under their immigration status; handle this information according to data policy.</inlineHelpText>
    <label>Work Authorization</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>