force-app/main/default/objects/Contact/fields/Work_Hours_Limit__c.field-meta.xml
<CustomField>
    <fullName>Work_Hours_Limit__c</fullName>
    <description>Maximum hours per week the Contact may work under their visa conditions. Classified as restricted data.</description>
    <inlineHelpText>Enter the weekly work-hours limit imposed by the visa; handle this information according to data policy.</inlineHelpText>
    <label>Work Hours Limit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>